<?xml version="1.0"?>
<package>
  <name>camera_handler</name>
  <version>1.0.0</version>
  <description>The camera_handler package</description>

  <maintainer email="giovanni.claudio@inria.fr">Giovanni Claudio</maintainer>



  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
    <url type="website">http://wiki.ros.org/vrep_ros_bridge</url>


  <author email="riccardo.spica@inria.fr">Riccardo Spica</author> 
  <author email="giovanni.claudio@inria.fr">Giovanni Claudio</author> 




  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>vrep_ros_plugin</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>vrep_ros_plugin</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
	 <vrep_ros_plugin plugin="${prefix}/plugin.xml" />

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
