<?xml version="1.0"?>
<package>
  <name>rigid_body_handler</name>
  <version>1.0.0</version>
  <description>The rigid_body_handler package</description>

  <maintainer email="giovanni.claudio@inria.fr">Giovanni Claudio</maintainer>


  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- <url type="website">http://wiki.ros.org/vrep_ros_plugin</url> -->
  <url type="repository">git://github.com/lagadic/vrep_ros_bridge.git</url>


  <author email="riccardo.spica@inria.fr">Riccardo Spica</author> 
  <author email="giovanni.claudio@inria.fr">Giovanni Claudio</author> 

  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>vrep_ros_plugin</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>vrep_ros_plugin</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
	 <vrep_ros_plugin plugin="${prefix}/plugin.xml" />

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
