<?xml version="1.0"?>
<package>
  <name>vrep_ros_bridge</name>
  <version>1.0.0</version>
  <description>The main application of the plugin is to provide a communication interface between V-Rep and (ROS). The aim is to control the V-Rep simulation externally using ROS messages and ROS services.</description>

  <maintainer email="giovanni.claudio@inria.fr">Giovanni Claudio</maintainer>
  <maintainer email="riccardo.spica@inria.fr">Riccardo Spica</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv2</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
   <url type="website">http://wiki.ros.org/vrep_ros_bridge</url>


  <author email="riccardo.spica@inria.fr">Riccardo Spica</author> 
  <author email="giovanni.claudio@inria.fr">Giovanni Claudio</author> 


  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>vrep_ros_plugin</run_depend>
  <run_depend>quadrotor_handler</run_depend>
  <run_depend>camera_handler</run_depend>
  <run_depend>imu_handler</run_depend>
  <run_depend>manipulator_handler</run_depend>
  <run_depend>rigid_body_handler</run_depend>
  <run_depend>force_sensor_handler</run_depend>
  <run_depend>contact_handler</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <metapackage/>

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
