<?xml version="1.0"?>
<package>
  <name>vrep_ros_plugin</name>
  <version>1.0.0</version>
  <description>The vrep_ros_plugin package</description>


<maintainer email="rspica@todo.todo">rspica</maintainer>
<maintainer email="rspica@todo.todo">rspica</maintainer>

<license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- <url type="website">http://wiki.ros.org/vrep_ros_plugin</url> -->
  <url type="repository">git://github.com/lagadic/vrep_ros_bridge.git</url>


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pluginlib</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
